--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+body{
+    
+    width: 90%;
+    margin:0 auto ;
+}
+
 .logo{
     height: 95px;
     width: 700px;
@@ -82,14 +88,16 @@
     width: 100%;
     height: 320px;
     margin-top: 25px;
+    margin-left: 90px;
     
 }
 
 .bnr-text{
-    margin-top: 130px;
+    margin-top: 160px;
     height: 450px;
     width: 450px;
     float: left;
+
 }
 
 .bnr-text h1{
@@ -109,10 +117,11 @@
 }
 
 #bnr-img img{
+    margin-top: 85px;
     height: 450px;
     width: 450px;
     float: left;
-    margin-left: 140px;
+    margin-left: 168px;
 }
 .header-btn{
     color: lawngreen;
@@ -124,6 +133,24 @@
 .header-btn:hover{
     color: navy;
     background-color: moccasin;
+}
+
+#nav-img{
+    height: 80px;
+}
+
+.menu-item{
+    margin-left: 300px;
+}
+
+.menu-item ul li a{
+    color: rgb(32, 11, 51);
+    font-weight: 700;
+    transition-delay: 3s;
+}
+
+.menu-item ul li a:hover{
+    border: 2px solid rgb(56, 29, 75);
 }
 
 
